# meridian_ws

./: .gitignore  Dockerfile  README.md  container_setup.md  entrypoint.sh  run_setup.sh
docs/: how-to-use.md
foxglove/: meridian_demo.json
src/meridian_annotation/: package.xml  setup.py
src/meridian_annotation/scripts/: annotate_episode.py
src/meridian_control/: CMakeLists.txt  package.xml  setup.py
src/meridian_control/meridian_control/: compliance_controller.py
src/meridian_control/msg/: ComplianceState.msg  ExecutionOutcome.msg
src/meridian_control/node_scripts/: compliance_controller
src/meridian_description/: CMakeLists.txt  package.xml
src/meridian_description/assets/: ur5e.urdf  ur5e.xml
src/meridian_sensors/: package.xml  setup.py
src/meridian_sensors/meridian_sensors/: ft_sensor_node.py
src/meridian_sensors/node_scripts/: ft_sensor_node
src/meridian_sim/: package.xml  setup.py
src/meridian_sim/config/: compliance_params.yaml
src/meridian_sim/launch/: replay.launch.py  sim_sensors.launch.py
src/meridian_sim/meridian_sim/: mujoco_sim_node.py
src/meridian_sim/node_scripts/: mujoco_sim_node
src/meridian_sim/scripts/: augment_mjcf.py  convert_urdf_to_mjcf.py  test_mjcf.py
